# osusume-wa

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  requirements.txt
app/: app.py
configs/: README.md  sample_dvc.yaml  workstreams.yaml
data/: friren_episode_sentiments.csv  kaguya_episode_sentiments.csv  one_piece_episode_sentiments.csv
docs/: README.md  overview.md  roadmap.md  user_guide.md
docs/arch/: data.md  infrastructure.md  maintenance.md  model.md  testing.md
docs/formatting/: extra.css
docs/ops/: index.md
models/: .gitignore  README.md  create_profiles.py  links.txt
notebooks/: README.md  review_scrape.py  test.py
src/: metrics.py  profile.py  scrape.py
